id on all boxes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,8 @@ footer{
 }
 
 #row2{
-    border:1px solid black;
+    border-top:1px solid black;
+    border-bottom: 1px solid black;
 }
 #row3{
 
