--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,8 @@ header{
 }
 
 main{
-    
+    min-width: 650px;
+    text-align: center;
 
 }
 
@@ -31,7 +32,8 @@ footer{
     max-width: 650px;
     max-height: 700px;
     border: 10px solid black;
-    margin: auto;
+    margin: 0 auto;
+    
 }
 #row1 {
     
@@ -69,6 +71,9 @@ footer{
 }
 
 #restart {
-    margin: auto;
+    font-size: 20px;
+    margin-top: 20px;
+    height: 50px;
+    width: 200px;
 }
 
