game now keeps score of previous wins
index was changed to have player 1 score and player 2 displayed in header.

app.js included logic to count player score and add score when winner decided

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,8 @@ body{
 }
 /* main sections */
 header{
-
+    display: flex;
+    text-align: center;
 }
 
 main{
@@ -19,7 +20,16 @@ footer{
 
 
 
-/* others */
+/* header content */
+#playerOne{
+
+}
+
+#playerOneScore{
+
+}
+
+
 #playerTurn{
     margin: auto;
 }
@@ -28,6 +38,16 @@ footer{
 
 }
 
+#playerTwo{
+
+}
+
+#playerTwoScore{
+
+}
+
+
+/* main content */
 #playground{  
     min-width: 650px;
     max-width: 650px;
