--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,3 +100,12 @@ footer{
     width: 200px;
 }
 
+#dialog{
+    font-size: 40px;
+    height: 900px;
+    width: 900px;
+    background-color: cornsilk;
+    text-align: center;
+    line-height: 200px;
+    
+}
