more css changes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,6 +133,25 @@ footer{
         max-width: 320px;
         margin: auto;
     }
+    #playerOne{
+        font-size: 15px;
+    
+    }
+    
+    #playerOneScore{
+        font-size: 50px;
+    }
+    
+    
+    #playerTwo{
+        font-size: 15px;
+    
+    }
+    
+    #playerTwoScore{
+        font-size: 50px;
+    }
+    
     main{
         max-width: 320px;
         min-width: 0px;
@@ -141,15 +160,15 @@ footer{
     }
 
     #playground{
-        min-width: 320px;
-        max-width: 320px;
+        min-width: 300px;
+        max-width: 300px;
         border: 5px solid black;
         margin: auto;
     }
 
     .box{
-        width: 100px;
-        height: 100px;
+        width: 90px;
+        height: 90px;
         margin: 0px;
     }
     #row2{
@@ -161,12 +180,12 @@ footer{
 
     .x{
         font-size: 100px;
-        line-height: 100px;
+        line-height: 95px;
     }
 
     .o{
         font-size: 100px;
-        line-height: 100px;
+        line-height: 95px;
     }
 
     #dialog{
