--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,13 +13,13 @@ header{
 
 main{
     min-width: 650px;
-    min-height: 1100px;
     text-align: center;
 
 }
 
 footer{
-
+    text-align: center;
+    font-size: 20px;
 }
 
 
