--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,12 @@ footer{
 .no-close .ui-dialog-titlebar-close {
     display: none;
 }
+
+i {
+    font-size:34px;
+    color: black;
+
+}
   
 
 @media only screen and (max-width: 425px) {
